# dessert

./: .gitignore  .travis.yml  DEVELOPMENT.md  Makefile  README.md  _test_build.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_requirements.txt  tox.ini
.github/workflows/: main.yml  test.yml
dessert/: __init__.py  __version__.py  conf.py  pathlib.py  rewrite.py  saferepr.py  util.py  warning_types.py
tests/: conftest.py  driver.py  examples.py  test_dessert.py  test_integration.py  test_readme_doctest.py
