[metadata]
name = dessert
classifiers =
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
summary = Assertion introspection via AST rewriting
description-file =
    README.md
description-content-type = text/markdown
license = MIT
author = Rotem Yaari
author_email = vmalloc@gmail.com
url = https://github.com/vmalloc/dessert

[extras]
testing =
    pytest
    emport>=1.1.1

[tool:pytest]
testpaths = tests
